fluxcd/infrastructure/services/overlays/production/phase-04-platform/gatus/httproute-xylem.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gatus-xylem
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "Monitoring (Gossip Stone💬)"
spec:
  parentRefs:
    - name: phloem-gateway
      namespace: arylls-lookout
  hostnames:
    - "status.pcfae.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gatus
          port: 80
